# rust_api_testing

./: .gitignore  Cargo.toml
migrations/2023-04-29-022626_create_tasts/: down.sql  up.sql
migrations/2023-05-02-215144_tasks/: down.sql  up.sql
src/: authentication.rs  data_access.rs  main.rs  schema.rs
src/api/: home_api.rs  math_api.rs  mod.rs
src/handlers/: home_handler.rs  math_handlers.rs  mod.rs  profile_handlers.rs  user_handlers.rs
src/models/: mod.rs  profile_model.rs  user_model.rs
src/routes/: home_route.rs  math_routes.rs  mod.rs  profile_routes.rs  user_routes.rs
