[package]
name = "websocket_testing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
actix-rt = "2.8.0"
libsqlite3-sys = { version = "0.26.0", features = ["bundled"] }
diesel = { version = "2.0.4", features = ["sqlite", "r2d2", "chrono"] }
serde = { version = "1.0.160", features = ["derive"] }
chrono = { version = "0.4.24", features = ["serde"] }
env_logger = "0.10.0"
rust-argon2 = "1.0.0"
rand = "0.8.5"